Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriTextRetundefined.quorum
class Main
    action Main
        text one = "green"
        text two = "green"
        Yoda<text, text, undefined> yoda
        undefined ret = yoda:useForce(one, two)
        output "passed"
     end
end
