Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriTextRetundefinedFail.quorum
class Main
    action Main
        text one = "green"
        text two = "green"
        Yoda<text, text, undefined> yoda
        boolean wrongRet = yoda(one, two)
     end
end
